2009-10-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 TODO:
 - Finally replaced with bug tickets.  Closes #29.
2009-09-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/notify-listen.cxx:
 - Added missing include: compiler-internal.hxx
 - Should fix link errors on Visual C++ from when callgates were introduced.
2009-08-29  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, src/connection_base.cxx:
 - Use bitset for capabilities array, thanks Kirit Saelensminde.
 - Rearranged member variables by size.
2009-08-26  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
 - Unnamed statements don't work with libpq 8 on 7.3 backend.
 - Guessing they require protocol 3.
2009-08-24  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test_helpers.hxx:
 - Create connection/transaction in run(), so only when needed.
 - Should fix test bailouts with 7.3 backends.
 - Makes it easier to catch & report connection failures better in the future.
 test/unit/test_cancel_query.cxx:
 - Pretty much nothing we can test about cancel_query, apart from no segfault.
2009-08-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
 - libpq versions without PQcancel don't have PGcancel either.
 - Never consider unnamed statement prepared, thanks Trigve Siver.
 test/unit/test_cancel_query.cxx:
 - Added test for cancel_query, thanks Don Madden.
 test/unit/test_prepared_statement.cxx:
 - Test less volatile unnamed prepared statement, thanks RhodiumToad.
2009-08-20  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, src/connection_base.cxx:
 - Made cancel_query public, thanks Don Madden.
 - Hid support for pre-PQcancel libpq versions a bit deeper.
 - Try harder to be graceful about canceling deactivated connections.
2009-08-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
 - Mark statement definition as complete when varargs are added.
2009-08-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx: