@@ -33,6 +33,7 @@ PQXX_HAVE_PQESCAPEBYTEACONN	internal	libpq
 PQXX_HAVE_PQESCAPESTRING	internal	libpq
 PQXX_HAVE_PQESCAPESTRINGCONN	internal	libpq
 PQXX_HAVE_PQPREPARE	internal	libpq
+PQXX_HAVE_PQEXECPARAMS	internal	libpq
 PQXX_HAVE_PQEXECPREPARED	internal	libpq
 PQXX_HAVE_PQFREEMEM	internal	libpq
 PQXX_HAVE_PQFREENOTIFY	internal	libpq
