@@ -12,6 +12,7 @@ libpqxx_la_SOURCES = binarystring.cxx \
 	prepared_statement.cxx \
 	result.cxx \
 	robusttransaction.cxx \
+	statement_parameters.cxx \
 	strconv.cxx \
 	subtransaction.cxx \
 	tablereader.cxx \
