@@ -2,6 +2,7 @@
  - Shared libraries are now versioned by ABI: 3.1 instead of 3.1.0 etc.
  - Threading behaviour is now documented, and can be queried.
  - Version information available at compile time.
+ - Supports parameterized statements.
  - Configure with --with-tr1=boost to use BOOST shared_ptr.
  - String conversion now has its own header file.
  - Supports read-only transactions.
